<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_weight="1"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/nameLable"
            android:text="@string/nameLable" 
            android:layout_width="60dip"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:layout_marginRight="@dimen/card_margin"/>
        <EditText
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10" >
        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/photoLable"
           android:layout_width="60dip"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:layout_marginRight="@dimen/card_margin"
            android:text="@string/photoLable" />

        <ImageView
            android:id="@+id/photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/contact_default_showself_icon" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/ringLable"
           android:layout_width="60dip"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:layout_marginRight="@dimen/card_margin"
            android:text="@string/ringLable" />

         <EditText
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/phoneLable"
           android:layout_width="60dip"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:layout_marginRight="@dimen/card_margin"
            android:text="@string/phoneLable" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/companyLable"
            android:layout_width="60dip"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:layout_marginRight="@dimen/card_margin"
            android:text="@string/companyLable" />

        <EditText
            android:id="@+id/company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/jobLable"
           android:layout_width="60dip"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:layout_marginRight="@dimen/card_margin"
            android:text="@string/jobLable" />

        <EditText
            android:id="@+id/job"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10" />

    </LinearLayout>
    
  
    
 </LinearLayout>